--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="main-section-index">
       <h1>About Me</h1>
 
-      <img src="C:\Users\riggs\codingBootcamp\homework\homework1\Basic-Portfolio\assets\images\Profile Pic.jpg" height="200px" width="200px" class="auth-image" alt="Mike Riggs">
+      <img src="assets\images\Profile Pic.jpg" height="200px" width="200px" class="auth-image" alt="Mike Riggs">
 
       <p>My name is Mike Riggs and I am currently enrolled in the coding bootcamp at the University of MN. I graduated from Tartan High school in 2006. After high school I attended the University of Wisconsin and obtained a bachelors degree in Business Management. I worked as an insurance sales manager for 5 years before making the decision to move into a career in computer coding.</p>
 
