--- a/portfolio.html
+++ b/portfolio.html
@@ -27,16 +27,16 @@
             <h1>Portfolio</h1>
 
             <div class="work">
-                <img src="https://images.unsplash.com/photo-1515703347135-0f3227f9799c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=1fe69dda98907229b5b8ba42cd18afc4&auto=format&fit=crop&w=1934&q=80"
-                    height="200px" width="200px" alt="Hockey">
+                <img src="assets\images\Psychic Game.PNG"
+                    height="200px" width="200px" alt="psychic">
                 <h3>
                     <a href="https://riggs041.github.io/Psychic-Game/">Psychic Game</a>
                 </h3>
             </div>
 
             <div class="work">
-                <img src="https://images.unsplash.com/photo-1457914109735-ce8aba3b7a79?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=65acee9023654758d6dda25eae350371&auto=format&fit=crop&w=600&q=60"
-                    height="200px" width="200px" alt="Simba">
+                <img src="assets\images\Crystals.PNG"
+                    height="200px" width="200px" alt="crystals">
 
                 <h3>
                     <a href="https://riggs041.github.io/unit-4-game/">Crystal Collectors</a>
@@ -44,29 +44,20 @@
             </div>
 
             <div class="work">
-                <img src="https://images.unsplash.com/photo-1434328547192-301a02a1f9ae?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=ddf26315be37d22c7645086d88967c0f&auto=format&fit=crop&w=1189&q=80"
-                    height="200px" width="200px" alt="Boat">
+                <img src="assets\images\Trivia.PNG"
+                    height="200px" width="200px" alt="trivia">
 
                 <h3>
-                    <a href="https://riggs041.github.io/unit-4-game/">Trivia Game</a>
+                    <a href="https://riggs041.github.io/TriviaGame/">Trivia Game</a>
                 </h3>
             </div>
 
             <div class="work">
-                <img src="https://images.unsplash.com/photo-1494949360228-4e9bde560065?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b78f5045b52c12ca99588bf27351db43&auto=format&fit=crop&w=600&q=60"
+                <img src="C:\Users\riggs\codingBootcamp\homework\homework 2\Responsive-Portfolio\assets\images\Giphy2.PNG"
                     height="200px" width="200px" alt="Thailand">
 
                 <h3>
                     <a href="https://riggs041.github.io/GIPHY/">Giphy</a>
-                </h3>
-            </div>
-
-            <div class="work">
-                <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-0.3.5&s=bbd3f4a55de814f1b93b80669674cc17&auto=format&fit=crop&w=1050&q=80"
-                    height="200px" width="200px" alt="Coding">
-
-                <h3>
-                    <a href="https://riggs041.github.io/Train-Scheduler/">Train Scheduler</a>
                 </h3>
             </div>
 
